load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

genrule(
    name = "convert_tflite_to_cc",
    srcs = ["tflite_model/audio_recognition_model.tflite"],
    outs = ["audio_recognition_model.cc"],
    cmd = "xxd -i $< > $@",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "get_tflite_cc",
    srcs = ["copy_model.sh"],
    # Passes the sandbox file path as the first argument ($1) to the script
    args = ["$(rootpath :convert_tflite_to_cc)"],
    data = [":convert_tflite_to_cc"],
)

cc_library(
    name = "sample_processing_from_file",
    srcs = [
        "src/sample_processing_from_file.cc",
    ],
    hdrs = [
        "api/sample_processing_from_file.h",
    ],
    includes = ["api"],
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common_types",
    ],
)

cc_library(
    name = "audio_model_pipeline",
    srcs = [
        "src/audio_model_pipeline.cc",
    ],
    hdrs = [
        "api/audio_model_pipeline.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common_types",
        "//modules/tflite_model_handler",
        "@tflm//tensorflow/lite/micro:micro_framework",
    ],
)

cc_binary(
    name = "simple_audio_recognition",
    srcs = [
        "src/audio_model_pipeline.cc",
        "src/main.cc",
        "tflite_model/audio_recognition_model.cc",
        "tflite_model/audio_recognition_model.h",
    ],
    data = [
        "//learning/example/simple_audio_recognition/train:audio_samples_dir",
    ],
    includes = ["tflite_model"],
    deps = [
        ":audio_model_pipeline",
        ":sample_processing_from_file",
        "//modules/common_types",
        "//modules/tflite_model_handler",
        "@tflm//tensorflow/lite/micro:micro_framework",
    ],
)
