# 1. Load the standard py_binary from rules_python
load("@rules_python//python:defs.bzl", "py_binary")
# 2. Load the requirement macro separately from your pip hub
load("@pip_deps_tfcore//:requirements.bzl", "requirement")

py_binary(
    name = "train",
    srcs = [
        "train.py",
        "audio_processing.py",
        "sample_processing.py",
    ],
    deps = [
        requirement("numpy"),
        requirement("tensorflow"),
        requirement("matplotlib"),
        requirement("seaborn"),
        requirement("IPython"),
    ],
)

py_binary(
    name = "convert_to_tflite",
    srcs = [
        "convert_to_tflite.py",
        "audio_processing.py",
        "sample_processing.py",
    ],
    deps = [
        requirement("numpy"),
        requirement("tensorflow"),
    ],
)

py_binary(
    name = "inspect_tflite",
    srcs = ["inspect_tflite.py"],
    deps = [
        requirement("tensorflow"),
    ],
)

py_binary(
    name = "run_inference_tflite",
    srcs = [
        "run_inference_tflite.py",
        "audio_processing.py",
        "sample_processing.py",
    ],
    deps = [
        requirement("ai-edge-litert"),
        requirement("numpy"),
        requirement("tensorflow"),
    ],
)

py_binary(
    name = "run_inference_keras",
    srcs = [
        "run_inference_keras.py",
        "audio_processing.py",
        "sample_processing.py",
    ],
    deps = [
        requirement("ai-edge-litert"),
        requirement("numpy"),
        requirement("tensorflow"),
    ],
)