# 2. Load the requirement macro separately from your pip hub
load("@pip_deps_tfcore//:requirements.bzl", "requirement")

# 1. Load the standard py_binary from rules_python
load("@rules_python//python:defs.bzl", "py_binary")
load(
    "@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl",
    "sphinx_docs_library",
)

py_binary(
    name = "train",
    srcs = [
        "audio_processing.py",
        "sample_processing.py",
        "train.py",
    ],
    imports = [
        ".",
    ],
    deps = [
        requirement("numpy"),
        requirement("tensorflow"),
        requirement("matplotlib"),
        requirement("seaborn"),
        requirement("IPython"),
    ],
)

py_binary(
    name = "convert_to_tflite",
    srcs = [
        "audio_processing.py",
        "convert_to_tflite.py",
        "sample_processing.py",
    ],
    imports = [
        ".",
    ],
    deps = [
        requirement("numpy"),
        requirement("tensorflow"),
    ],
)

py_binary(
    name = "inspect_tflite",
    srcs = ["inspect_tflite.py"],
    imports = [
        ".",
    ],
    deps = [
        requirement("tensorflow"),
    ],
)

py_binary(
    name = "run_inference_tflite",
    srcs = [
        "audio_processing.py",
        "run_inference_tflite.py",
        "sample_processing.py",
    ],
    imports = [
        ".",
    ],
    deps = [
        requirement("ai-edge-litert"),
        requirement("numpy"),
        requirement("tensorflow"),
    ],
)

py_binary(
    name = "run_inference_keras",
    srcs = [
        "audio_processing.py",
        "run_inference_keras.py",
        "sample_processing.py",
    ],
    imports = [
        ".",
    ],
    deps = [
        requirement("ai-edge-litert"),
        requirement("numpy"),
        requirement("tensorflow"),
    ],
)

filegroup(
    name = "audio_samples_dir",
    srcs = [],
    data = ["build_dir/data/mini_speech_commands_extracted/mini_speech_commands"],
    visibility = ["//visibility:public"],
)

########################### Documentation Definitions ###########################

sphinx_docs_library(
    name = "train_python_docs",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
)
