load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl",
    "sphinx_docs_library",
)

########################### Library Definitions #################################

cc_library(
    name = "miniaudio",
    srcs = [
        "src/miniaudio.c",
    ],
    hdrs = [
        "api/miniaudio.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

########################### Documentation Definitions ###########################

sphinx_docs_library(
    name = "miniaudio_docs",
    srcs = glob(["docs/*.rst"]),
    visibility = ["//docs:__subpackages__"],
)
